# pyauto

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyauto_config.json  tailwind.config.js  train_yolo.py
.github/workflows/: release.yml
sidecar/: bridge.py  config_manager.py  controller.py  license_manager.py  main.py  ocr_processor.py  requirements.txt  screen_capture.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  check_log.txt  pyauto_config.json  tauri.conf.json  tauri.key.pub
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/engine/: capture.rs  input.rs  license.rs  mod.rs  ocr.rs  yolo.rs
