[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tokio = { version = "1.48.0", features = ["full"] }
windows = { version = "0.58.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Media_Ocr", 
    "Globalization", 
    "Graphics_Imaging",
    "Storage_Streams",
    "Foundation_Collections",
    "Security_Cryptography"
] }
# Windows Native OCR
image = "0.25"
lazy_static = "1.4"
parking_lot = "0.12"
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"
base64 = "0.21"
chrono = "0.4"
strsim = "0.11.1"
regex = "1.12.2"
ureq = { version = "2.10", features = ["json"] }
ed25519-dalek = "2.2.0"
sha2 = "0.10.9"

